# data-analysys-by-claude

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend.dev  Dockerfile.storybook  Dockerfile.storybook.dev  README.md  app.py  docker-compose.yml  github-issues-template.md  main.py  nginx.conf  pyproject.toml  ruff.toml  run_backend.py  start_offline.py  storybook-server.html  temp-nginx.conf
.streamlit/: config.toml
backend/: main.py
backend/api/: models.py  routes.py
data/: customer_data.json  sales_data.csv
database/init/: 01_schema.sql  02_seed_data.sql
database/migrations/: migrate_data.py
frontend/: angular.json  package-lock.json  package.json  simple-storybook.js  tsconfig.json
frontend/.storybook/: main.ts  preview.ts
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/components/charts/: charts.component.ts  charts.stories.ts
frontend/src/app/components/dashboard/: dashboard.component.ts
frontend/src/app/components/data-tables/: data-tables.component.ts  data-tables.stories.ts
frontend/src/app/components/filter-panel/: filter-panel.component.ts  filter-panel.stories.ts
frontend/src/app/models/: data.models.ts
frontend/src/app/services/: data.service.ts
frontend/src/assets/: storybook.html
src/: config.py
src/application/: use_cases.py
src/domain/: models.py
src/infrastructure/: database.py  models.py  repositories.py
src/presentation/: components.py
(+5 files in other folders)
