[project]
name = "data-analysys-by-claude"
version = "0.1.0"
description = "Data analysis dashboard with FastAPI and Angular"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "plotly>=6.1.2",
    "ruff>=0.11.12",
    "pydantic>=2.4.0",
    "python-multipart>=0.0.6",
]
